--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,11 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.11.7",
     "uvicorn>=0.35.0",
+    "pytest>=7.4.0",
+    "loguru>=0.7.2",
+]
+
+[tool.pytest.ini_options]
+testpaths = [
+    "tests",
 ]
